@@ -1,6 +1,7 @@
 2007-08-27  Badlop  <badlop@ono.com>
 
-	* src/mod_webpresence.erl: Enforce Hash and JID options in a web request. The Hash is now a pseudo random integer. Added support for avatar output. Added support to show image of a specific resource.
+	* src/mod_webpresence.erl: Enforce Hash and JID options in a web request. The Hash is now a pseudo random integer. Added support for avatar output. Added support to show image of a specific resource. Improved Form, Message and Web.
+	
 
 2007-08-26  Badlop  <badlop@ono.com>
 
